adds new collectable image

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </div>
   <h3>Click the button to download your collectable:</h3>
   <!-- The button for downloading the picture -->
-  <a href="collectable.png" download>
+  <a href="collectable.jpeg" download>
     <button>Download Picture</button>
   </a>
-
+<p>Post on your insta & tag us:)</p>
 </body>
 
 </html>
