background color change

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="index.css" rel="stylesheet">
   <title>ELAC-EOP&S First Gen 2023</title>
   <style>
     img {
@@ -15,14 +16,13 @@
 
 <body>
   <div>
-    <image src="collectable.png" />
+    <image src="collectable.jpeg" />
   </div>
   <h3>Click the button to download your collectable:</h3>
   <!-- The button for downloading the picture -->
   <a href="collectable.jpeg" download>
     <button>Download Picture</button>
   </a>
-<p>Post on your insta & tag us:)</p>
 </body>
 
 </html>
