--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
 </head>
 
 <body>
-  <div>
-    <image src="collectable.jpeg" />
+  <div class="card">
+    <div>
+      <image class="img" src="collectable.jpeg" />
+    </div>
+    <div class="card-text">
+      <h3>Click the button to download your collectable:</h3>
+      <!-- The button for downloading the picture -->
+      <a href="collectable.jpeg" download>
+        <button>Download Collectable</button>
+      </a>
+      <h4>We Honor You!</h4>
+    </div>
   </div>
-  <h3>Click the button to download your collectable:</h3>
-  <!-- The button for downloading the picture -->
-  <a href="collectable.jpeg" download>
-    <button>Download Picture</button>
-  </a>
 </body>
 
 </html>
