--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
   <div class="card">
     <div>
-      <image class="img" src="collectable.jpeg" />
+      <image class="img" src="collectable.png" />
     </div>
     <div class="card-text">
       <h3>Click the button to download your collectable:</h3>
       <!-- The button for downloading the picture -->
-      <a href="collectable.jpeg" download>
+      <a href="collectable.png" download>
         <button>Download Collectable</button>
       </a>
       <h4>We Honor You!</h4>
