adds site header

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="index.css" rel="stylesheet">
   <title>ELAC-EOP&S First Gen 2023</title>
-  <style>
-    img {
-      max-width: 400px;
-      height: auto;
-    }
-  </style>
 </head>
 
 <body>
+  <div class="dark-green-theme">
+    <div>East Los Angeles Jr College</div>
+  </div>
   <div class="card">
     <div>
       <image class="img" src="collectable.jpeg" />
